# mys-rust-sdk

./: LICENSE  Makefile  README.md
crates/mso-crypto/: Cargo.toml  README.md
crates/mso-crypto/src/: ed25519.rs  lib.rs  multisig.rs  passkey.rs  secp256k1.rs  secp256r1.rs  simple.rs
crates/mso-graphql-client/: Cargo.toml  README.md  build.rs
crates/mso-graphql-client-build/: Cargo.toml  README.md  schema.graphql
crates/mso-graphql-client-build/src/: lib.rs
crates/mso-graphql-client/examples/: custom_query.rs
crates/mso-graphql-client/src/: error.rs  faucet.rs  lib.rs  streams.rs
crates/mso-graphql-client/src/query_types/: active_validators.rs  checkpoint.rs  dry_run.rs  dynamic_fields.rs  mod.rs  packages.rs  service_config.rs  suins.rs  transaction.rs
crates/mso-sdk-types/: Cargo.toml  README.md
crates/mso-sdk-types/src/: digest.rs  framework.rs  hash.rs  object.rs
crates/mso-transaction-builder/: Cargo.toml
crates/mso-transaction-builder/src/: error.rs  lib.rs  unresolved.rs
crates/mys-crypto/: Cargo.toml  README.md
crates/mys-crypto/src/: ed25519.rs  lib.rs  multisig.rs  passkey.rs  secp256k1.rs  secp256r1.rs  simple.rs
crates/mys-graphql-client/: Cargo.toml  README.md  build.rs
crates/mys-graphql-client-build/: Cargo.toml  README.md  schema.graphql
crates/mys-graphql-client-build/src/: lib.rs
crates/mys-graphql-client/examples/: custom_query.rs
crates/mys-graphql-client/queries/: object.graphql
crates/mys-graphql-client/src/: error.rs  faucet.rs  lib.rs  streams.rs
crates/mys-sdk-types/: Cargo.toml  README.md
crates/mys-transaction-builder/: Cargo.toml
crates/mys-transaction-builder/src/: error.rs  lib.rs  unresolved.rs
crates/mys-transaction-builder/tests/test_example_v1/: Move.toml
crates/myso-crypto/: CHANGELOG.md  Cargo.toml  README.md
crates/myso-graphql-client/: Cargo.toml  README.md  build.rs
crates/myso-graphql-client-build/: Cargo.toml  README.md  schema.graphql
crates/myso-sdk-types/: CHANGELOG.md  Cargo.toml  README.md
crates/myso-transaction-builder/: Cargo.toml
crates/mysocial-crypto/: Cargo.toml  README.md
crates/mysocial-graphql-client/: Cargo.toml  README.md  build.rs
crates/mysocial-graphql-client-build/: Cargo.toml  README.md  schema.graphql
crates/mysocial-sdk-types/: Cargo.toml  README.md
crates/mysocial-transaction-builder/: Cargo.toml
(+116 files in other folders)
